@@ -6284,6 +6284,8 @@ toplevel/trace.cmi : \
     typing/path.cmi \
     parsing/longident.cmi \
     typing/env.cmi
+toplevel/byte/topdirs.cmi : \
+    parsing/longident.cmi
 toplevel/byte/topeval.cmo : \
     utils/warnings.cmi \
     typing/types.cmi \
@@ -6363,11 +6365,20 @@ toplevel/byte/topeval.cmi : \
     typing/path.cmi \
     parsing/parsetree.cmi \
     typing/env.cmi
+toplevel/byte/toploop.cmi : \
+    utils/warnings.cmi \
+    typing/types.cmi \
+    typing/path.cmi \
+    parsing/parsetree.cmi \
+    typing/outcometree.cmi \
+    parsing/longident.cmi \
+    parsing/location.cmi \
+    typing/env.cmi
 toplevel/byte/topmain.cmo : \
     toplevel/byte/trace.cmi \
-    toplevel/toploop.cmi \
+    toplevel/byte/toploop.cmi \
     toplevel/byte/topeval.cmi \
-    toplevel/topdirs.cmi \
+    toplevel/byte/topdirs.cmi \
     toplevel/topcommon.cmi \
     typing/printtyp.cmi \
     typing/path.cmi \
@@ -6382,9 +6393,9 @@ toplevel/byte/topmain.cmo : \
     toplevel/byte/topmain.cmi
 toplevel/byte/topmain.cmx : \
     toplevel/byte/trace.cmx \
-    toplevel/toploop.cmx \
+    toplevel/byte/toploop.cmi \
     toplevel/byte/topeval.cmx \
-    toplevel/topdirs.cmx \
+    toplevel/byte/topdirs.cmi \
     toplevel/topcommon.cmx \
     typing/printtyp.cmx \
     typing/path.cmx \
